**  denotes quite substantial/important changes
*** denotes really big changes 

Currently deprecated and liable to be removed: 
- bam(...,sparse=TRUE) [1.8-5]
- single penalty tensor product smooths.
- p.type!=0 in summary.gam.

1.8-13

* offsets allowed with multinomial, ziplss and gaulss families.

* 's', 'te', 'ti' and 't2' modified to allow user to specify that the smooth
  should pass through zero at a specified point. See ?identifiability.

* modification to 'smoothCon' to allow resetting of smooth supplied 
  constraints - enables fix of bug in bam handling of 't2' terms, where
  parameterization of penalty and model matrix did not previously match 
  properly. 

* modification to 'plot.gam' etc, so that 'ylim' is no longer shifted by 
  'shift'. 

* ylim and ... handling improved for 'fs' plot method (thanks Dave Miller)

* anova.gam modified to use more appropriate reference degrees of freedom 
  for multiple model call, where possible. Also fixed to allow multiple 
  formulae models and to use -2*logLik in place of `deviance' for 
  general.family models.

* bam(...,discrete=TRUE) no longer complains about more coefficients than data.

* gam.check now recognises RStudio and plots appropriately.

* tweak to initial.sp/g to avoid infinite loop in s.p. initialization, in 
  rather unusual circumstances. Thanks to Mark Bravington.

* bam and gam have `drop.intercept' argument to force the parametric terms not 
  to include a constant in their span, even when there are factor variables. 

* Fix in Vb.corr (2nd order edf correction) for fixed smoothing parameter case.

* added 'all.vars1' to enable terms like s(x$y) in model formulae. 

* modification to gam.fit4 to ignore 'start' if it is immediately worse than 
  'null.coef'.

* Added help file ?one.se.rule on the `one standard error rule' for obtaining 
  smoother models.

* cSplineDes can now accept a 'derivs' argument.

* added drop.intercept handling for multiple formulae (mod by Matteo Fasiolo).
