@@ -276,67 +276,6 @@ discrete.mf <- function(gp,mf,pmf,m=NULL,full=TRUE) {
     } ## end marginal jj loop
   } ## term loop (i)
 
-## old long winded code...
-## deal with any by variable (should always go first as basically a 1D marginal)... 
-#    if (gp$smooth.spec[[i]]$by!="NA") {
-#      termi <- gp$smooth.spec[[i]]$by ## var name
-#      ik.prev <- check.term(termi,rec) ## term already discretized?
-#      ik <- ik + 1 ## increment index counter
-#      if (ik.prev==0) { ## new discretization required
-#         mfd <- compress.df(mf[termi],m=mi)
-#         k[,ik] <- attr(mfd,"index")
-#         nr[ik] <- nrow(mfd)
-#         mf0 <- c(mf0,mfd) 
-#         ## record variable discretization info... 
-#         rec$vnames <- c(rec$vnames,termi)
-#         rec$ki <- c(rec$ki,ik)
-#         rec$d <- c(rec$d,1)
-#        
-#       } else { ## re-use an earlier discretization...
-#         k[,ik] <- k[,ik.prev]
-#         nr[ik] <- nr[ik.prev]
-#       }
-#    }  
-#    if (inherits(gp$smooth.spec[[i]],"tensor.smooth.spec")) { ## tensor branch
-#      for (j in 1:length(gp$smooth.spec[[i]]$margin)) { ## loop through margins
-#        termj <- gp$smooth.spec[[i]]$margin[[j]]$term
-#        ik.prev <- check.term(termj,rec) 
-#        ik <- ik + 1
-#        if (ik.prev==0) { ## new discretization required
-#          mfd <- compress.df(mf[termj],m=mi)
-#          k[,ik] <- attr(mfd,"index")
-#          nr[ik] <- nrow(mfd)
-#          mf0 <- c(mf0,mfd)
-#          ## record details...
-#          d <- length(termj)
-#          rec$vnames <- c(rec$vnames,termj)
-#          rec$ki <- c(rec$ki,rep(ik,d))
-#          rec$d <- c(rec$d,rep(d,d))
-#        } else { ## re-use an earlier discretization... 
-#          k[,ik] <- k[,ik.prev]
-#          nr[ik] <- nr[ik.prev]
-#        }
-#      }
-#    } else { ## not te or ti...
-#      termi <- gp$smooth.spec[[i]]$term 
-#      ik.prev <- check.term(termi,rec) 
-#      ik <- ik + 1 ## index counter
-#      if (ik.prev==0) { ## new discretization required
-#        mfd <- compress.df(mf[termi],m=mi)
- #       k[,ik] <- attr(mfd,"index")
-#        nr[ik] <- nrow(mfd)
-#        mf0 <- c(mf0,mfd) 
-#        d <- length(termi)
-#        rec$vnames <- c(rec$vnames,termi)
-#        rec$ki <- c(rec$ki,rep(ik,d))
-#        rec$d <- c(rec$d,rep(d,d))
-#      } else { ## re-use an earlier discretization...
-#        k[,ik] <- k[,ik.prev]
-#        nr[ik] <- nr[ik.prev]
-#      }
-#    }
-#   
-#  } ## main term loop
 
   ## obtain parametric terms and..
   ## pad mf0 so that all rows are the same length
@@ -1034,173 +973,6 @@ bgam.fit <- function (G, mf, chunk.size, gp ,scale ,gamma,method, coef=NULL,etas
 
 
 
-bgam.fit2 <- function (G, mf, chunk.size, gp ,scale ,gamma,method, etastart = NULL,
-    mustart = NULL, offset = rep(0, nobs), control = gam.control(), intercept = TRUE,npt=1)
-## version using sparse full model matrix in place of QR update...
-## not multi-threaded, due to anyway disappointing performance
-{   G$y <- y <- mf[[gp$response]]
-    weights <- G$w
-    conv <- FALSE
-    nobs <- nrow(mf)
-    ##nvars <- ncol(G$X)
-    offset <- G$offset
-    family <- G$family
-    G$family <- gaussian() ## needed if REML/ML used
-    variance <- family$variance
-    dev.resids <- family$dev.resids
-    ##aic <- family$aic
-    linkinv <- family$linkinv
-    mu.eta <- family$mu.eta
-    if (!is.function(variance) || !is.function(linkinv))
-        stop("'family' argument seems not to be a valid family object")
-    valideta <- family$valideta
-    if (is.null(valideta))
-        valideta <- function(eta) TRUE
-    validmu <- family$validmu
-    if (is.null(validmu))
-        validmu <- function(mu) TRUE
-    if (is.null(mustart)) {
-        eval(family$initialize)
-    }
-    else {
-        mukeep <- mustart
-        eval(family$initialize)
-        mustart <- mukeep
-    }
- 
-    ##coefold <- NULL
-    eta <- if (!is.null(etastart))
-         etastart
-    else family$linkfun(mustart)
-    
-    mu <- linkinv(eta)
-    if (!(validmu(mu) && valideta(eta)))
-       stop("cannot find valid starting values: please specify some")
-    dev <- sum(dev.resids(y, mu, weights))*2 ## just to avoid converging at iter 1
-    ##boundary <- 
-    conv <- FALSE
-
-    G$n <- nobs
-    X <- G$X 
-    ## need to reset response and weights to post initialization values
-    ## in particular to deal with binomial properly...
-    G$y <- y
-    G$w <- weights
-
-    conv <- FALSE
-    for (iter in 1L:control$maxit) { ## main fitting loop
-      devold <- dev
-      if (iter>1) eta <- as.numeric(X%*%coef) + offset
-      mu <- linkinv(eta)
-      mu.eta.val <- mu.eta(eta)
-      good <- (G$w > 0) & (mu.eta.val != 0)
-      z <- (eta - offset)[good] + (y - mu)/mu.eta.val
-      w <- (G$w[good] * mu.eta.val[good]^2)/variance(mu)[good]
-      dev <- sum(dev.resids(y,mu,G$w))
-      W <- Diagonal(length(w),sqrt(w))
-      if (sum(good)<nobs) {
-        XWX <- as(Matrix::crossprod(W%*%X[good,]),"matrix")
-      } else {
-        XWX <- as(Matrix::crossprod(W%*%X),"matrix")
-      }      
-      qrx <- list(R = chol(XWX))
-      Wz <- W%*%z
-
-      ## in following note that Q = WXR^{-1} 
-      if (sum(good)<nobs) {
-        qrx$f <- forwardsolve(t(qrx$R),as.numeric(t(X[good,])%*%(W%*%Wz)))
-      } else {
-        qrx$f <- forwardsolve(t(qrx$R),as.numeric(t(X)%*%(W%*%Wz)))
-      }
-      qrx$y.norm2 <- sum(Wz^2)
-   
-      rss.extra <- qrx$y.norm2 - sum(qrx$f^2)
-      
-      if (control$trace)
-         message(gettextf("Deviance = %s Iterations - %d\n", dev, iter, domain = "R-mgcv"))
-
-      if (!is.finite(dev)) stop("Non-finite deviance")
-
-      ## preparation for working model fit is ready, but need to test for convergence first
-      if (iter>2 && abs(dev - devold)/(0.1 + abs(dev)) < control$epsilon) {
-          conv <- TRUE
-         # coef <- start
-          break
-      }
-
-      if (method=="GCV.Cp") {
-         fit <- magic(qrx$f,qrx$R,G$sp,G$S,G$off,L=G$L,lsp0=G$lsp0,rank=G$rank,
-                      H=G$H,C= matrix(0,0,ncol(qrx$R)), ##C=G$C,
-                      gamma=gamma,scale=scale,gcv=(scale<=0),
-                      extra.rss=rss.extra,n.score=G$n)
- 
-         post <- magic.post.proc(qrx$R,fit,qrx$f*0+1) 
-      } else { ## method is "REML" or "ML"
-        y <- G$y; w <- G$w; n <- G$n;offset <- G$offset
-        G$y <- qrx$f
-        G$w <- G$y*0+1
-        G$X <- qrx$R
-        G$n <- length(G$y)
-        G$offset <- G$y*0
-        G$dev.extra <- rss.extra
-        G$pearson.extra <- rss.extra
-        G$n.true <- n
-        object <- gam(G=G,method=method,gamma=gamma,scale=scale,control=gam.control(nthreads=npt))
-        y -> G$y; w -> G$w; n -> G$n;offset -> G$offset
-      }
-      gc()
-
-      if (method=="GCV.Cp") { 
-        object <- list()
-        object$coefficients <- fit$b
-        object$edf <- post$edf
-        object$edf1 <- post$edf1
-        #object$F <- post$F
-        object$full.sp <- fit$sp.full
-        object$gcv.ubre <- fit$score
-        object$hat <- post$hat
-        object$mgcv.conv <- fit$gcv.info 
-        object$optimizer="magic"
-        object$rank <- fit$gcv.info$rank
-        object$Ve <- post$Ve
-        object$Vp <- post$Vb
-        object$sig2 <- object$scale <- fit$scale
-        object$sp <- fit$sp
-        names(object$sp) <- names(G$sp)
-        class(object)<-c("gam")
-      }
-
-      coef <- object$coefficients
-        
-      if (any(!is.finite(coef))) {
-          conv <- FALSE
-          warning("non-finite coefficients at iteration ",
-                  iter)
-          break
-      }
-    } ## fitting iteration
-
-    if (!conv)
-       warning("algorithm did not converge")
-   
-    eps <- 10 * .Machine$double.eps
-    if (family$family == "binomial") {
-         if (any(mu > 1 - eps) || any(mu < eps))
-                warning("fitted probabilities numerically 0 or 1 occurred")
-    }
-    if (family$family == "poisson") {
-            if (any(mu < eps))
-                warning("fitted rates numerically 0 occurred")
-    }
-      
-  object$iter <- iter  
-  object$wt <- w
-  object$R <- qrx$R
-  object$y <- G$y
-  object$prior.weights <- G$w
-  rm(G);gc()
-  object
-} ## end bgam.fit2
 
 ar.qr.up <- function(arg) {
 ## function to perform QR updating with AR residuals, on one execution thread
@@ -1791,36 +1563,6 @@ predict.bamd <- function(object,newdata,type="link",se.fit=FALSE,terms=NULL,excl
 
 
 
-sparse.model.matrix <- function(G,mf,chunk.size) {
-## create a whole sparse model matrix
-  nobs = nrow(mf)
-  n.block <- nobs%/%chunk.size ## number of full sized blocks
-  stub <- nobs%%chunk.size ## size of end block
-  if (n.block>0) {
-    start <- (0:(n.block-1))*chunk.size+1
-      stop <- (1:n.block)*chunk.size
-      if (stub>0) {
-        start[n.block+1] <- stop[n.block]+1
-        stop[n.block+1] <- nobs
-        n.block <- n.block+1
-      } 
-  } else {
-    n.block <- 1
-    start <- 1
-    stop <- nobs
-  }
-  G$coefficients <- rep(0,ncol(G$X))
-  class(G) <- "gam"
-
-  X <- Matrix(0,nobs,ncol(G$X))   
-  for (b in 1:n.block) {    
-    ind <- start[b]:stop[b]
-    #G$model <- mf[ind,]
-    X[ind,] <- as(predict(G,newdata=mf[ind,],type="lpmatrix",newdata.guaranteed=TRUE,blocksize=length(ind)),"dgCMatrix")
-    gc()
-  }
-  X
-} # sparse.model.matrix
 
 tero <- function(sm) {
 ## te smooth spec re-order so that largest marginal is last.
@@ -1864,7 +1606,7 @@ AR.resid <- function(rsd,rho=0,AR.start=NULL) {
 bam <- function(formula,family=gaussian(),data=list(),weights=NULL,subset=NULL,na.action=na.omit,
                 offset=NULL,method="fREML",control=list(),select=FALSE,scale=0,gamma=1,knots=NULL,sp=NULL,
                 min.sp=NULL,paraPen=NULL,chunk.size=10000,rho=0,AR.start=NULL,discrete=FALSE,
-                sparse=FALSE,cluster=NULL,nthreads=NA,gc.level=1,use.chol=FALSE,samfrac=1,
+                cluster=NULL,nthreads=NA,gc.level=1,use.chol=FALSE,samfrac=1,
                 drop.unused.levels=TRUE,G=NULL,fit=TRUE,drop.intercept=NULL,...)
 
 ## Routine to fit an additive model to a large dataset. The model is stated in the formula, 
@@ -1908,10 +1650,7 @@ bam <- function(formula,family=gaussian(),data=list(),weights=NULL,subset=NULL,n
       min.sp <- NULL
       warning("min.sp not supported with fast REML computation, and ignored.")
     }
-    if (sparse&&method%in%c("fREML")) {
-      method <- "REML"
-      warning("sparse=TRUE not supported with fast REML, reset to REML.")
-    }
+   
     gp <- interpret.gam(formula) # interpret the formula 
     if (discretize) { 
       ## re-order the tensor terms for maximum efficiency, and 
@@ -1934,7 +1673,7 @@ bam <- function(formula,family=gaussian(),data=list(),weights=NULL,subset=NULL,n
     mf <- match.call(expand.dots=FALSE)
     mf$formula <- gp$fake.formula 
     mf$method <-  mf$family<-mf$control<-mf$scale<-mf$knots<-mf$sp<-mf$min.sp <- mf$gc.level <-
-    mf$gamma <- mf$paraPen<- mf$chunk.size <- mf$rho <- mf$sparse <- mf$cluster <- mf$discrete <-
+    mf$gamma <- mf$paraPen<- mf$chunk.size <- mf$rho  <- mf$cluster <- mf$discrete <-
     mf$use.chol <- mf$samfrac <- mf$nthreads <- mf$G <- mf$fit <- mf$select <- mf$drop.intercept <- mf$...<-NULL
     mf$drop.unused.levels <- drop.unused.levels
     mf[[1]] <- quote(stats::model.frame) ## as.name("model.frame")
@@ -1993,7 +1732,7 @@ bam <- function(formula,family=gaussian(),data=list(),weights=NULL,subset=NULL,n
 
     } else { 
       mf0 <- mini.mf(mf,chunk.size)
-      if (sparse) sparse.cons <- 2 else sparse.cons <- -1
+      sparse.cons <- -1
     }
     rm(pmf); ## no further use
     if (control$trace) t1 <- proc.time()
@@ -2114,7 +1853,6 @@ bam <- function(formula,family=gaussian(),data=list(),weights=NULL,subset=NULL,n
     } ## if (discretize)
 
     if (control$trace) t3 <- proc.time()
-    G$sparse <- sparse
 
     ## no advantage to "fREML" with no free smooths...
     if (((!is.null(G$L)&&ncol(G$L) < 1)||(length(G$sp)==0))&&method=="fREML") method <- "REML"
@@ -2177,15 +1915,7 @@ bam <- function(formula,family=gaussian(),data=list(),weights=NULL,subset=NULL,n
   
   colnamesX <- colnames(G$X)  
 
-  if (G$sparse) { ## Form a sparse model matrix...
-    warning("sparse=TRUE is deprecated")
-    if (sum(G$X==0)/prod(dim(G$X))<.5) warning("model matrix too dense for any possible benefit from sparse")
-    if (nrow(mf)<=chunk.size) G$X <- as(G$X,"dgCMatrix") else 
-      G$X <- sparse.model.matrix(G,mf,chunk.size)
-    if (rho!=0) warning("AR1 parameter rho unused with sparse fitting")
-    object <- bgam.fit2(G, mf, chunk.size, gp ,scale ,gamma,method=method,
-                       control = control,npt=nthreads,...)
-  } else if (G$am&&!G$discretize) {
+  if (G$am&&!G$discretize) {
     if (nrow(mf)>chunk.size) G$X <- matrix(0,0,ncol(G$X)); if (gc.level>1) gc() 
     object <- bam.fit(G,mf,chunk.size,gp,scale,gamma,method,rho=rho,cl=cluster,
                       gc.level=gc.level,use.chol=use.chol,npt=nthreads)
